--- a/InstantCredit/InstantCredit/ClientApp/package.json
+++ b/InstantCredit/InstantCredit/ClientApp/package.json
@@ -3,15 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.14.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
     "@mui/material": "^5.8.2",
+    "@mui/x-date-pickers": "^5.0.0-alpha.5",
     "@types/node": "^17.0.18",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router": "^5.1.18",
     "axios": "^0.27.2",
     "bootstrap": "^5.1.0",
+    "date-fns": "^2.28.0",
     "http-proxy-middleware": "^0.19.1",
     "jquery": "^3.5.1",
     "merge": "^2.1.1",
